cargo-features = ["edition2021"]

[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
borsh = "0.9"
solana-program = "=1.9.1"
thiserror = "1.0"
bytemuck = {version = "1.7.2", features = ["derive"]}

[lib]
crate-type = ["cdylib", "lib"]
