cargo-features = ["edition2021"]

[package]
name = "count_tracker"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
authorized_counter = {path="../authorized_counter", features=["no-entrypoint"]}
borsh = "0.9"
solana-program = "=1.9.1"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
